Fix filter appearing on mobile v

--- a/src/components/Checklist/Checklist.module.css
+++ b/src/components/Checklist/Checklist.module.css
@@ -62,6 +62,11 @@
     background-color: #E6F7FF;
 }
 
+.isMobileWindow {
+    opacity: 0;
+    visibility: hidden;
+}
+
 @media (max-width: 768px) {
     .checkList {
         max-width: 100%;
